--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -32,9 +32,9 @@ jobs:
           
           has_common=$(echo "$list" | grep -- '-common' > /dev/null && echo true || echo false)
 
-          echo "valor de commonChanged: $has_common"
+          echo "Commit includes common changes: $has_common"
 
-          if $commonChanged; then
+          if $has_common; then
             allModules=$(find ../automation/ -type f -name '*-connector*' | awk -F/ '{print $(NF)}' | uniq)
             for module in $(echo $list | tr ',' ' '); do
               if echo $module | grep -qE ".*-connector.*"; then
@@ -52,7 +52,7 @@ jobs:
 
           
           echo "All Filtered Modules: $allModules"
-          echo "commonFlag=$commonChanged" >> $GITHUB_OUTPUT
+          echo "commonFlag=$has_common" >> $GITHUB_OUTPUT
           echo "modules=$list" >> $GITHUB_OUTPUT
           echo "filteredModules=$allModules" >> $GITHUB_OUTPUT
 
