--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -36,6 +36,7 @@ jobs:
 
           if $has_common; then
             allModules=$(find ../automation/ -type f -name '*-connector*' | awk -F/ '{print $(NF)}' | uniq)
+            echo "executed allmodules"
             for module in $(echo $list | tr ',' ' '); do
               if echo $module | grep -qE ".*-connector.*"; then
                 allModules=$(echo $allModules | sed "s/\b$module\b//g")
