--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -35,7 +35,7 @@ jobs:
           echo "Commit includes common changes: $has_common"
 
           if $has_common; then
-            allModules=$(find /home/runner/work/automation/automation -type d -name '*-connector*' -exec basename {} \;)
+            allModules=$(find /home/runner/work/automation/automation -type d -name '*-connector*' -printf "%f ")
             echo "$allModules"
             echo "executed allmodules"
             for module in $(echo $list | tr ',' ' '); do
