--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -35,15 +35,8 @@ jobs:
           echo "Commit includes common changes: $has_common"
 
           if $has_common; then
-            allModules=$(find /home/runner/work/automation/automation -type d -name '*-connector*' -printf "%f ")
+            allModules=$(find /home/runner/work/automation/automation -type d -name '*-connector*' -printf "%f," | sed 's/,$//' | grep -vFf <(echo "$list" | tr ',' '\n') | tr '\n' ' ')
             echo "$allModules"
-            echo "executed allmodules"
-            for module in $(echo $list | tr ',' ' '); do
-              if echo $module | grep -qE ".*-connector.*"; then
-                allModules=$(echo $allModules | sed "s/\b$module\b//g")
-              fi
-            done
-          
             for module in $allModules; do
               author=$(unzip -p "$module" src/main/resources/META-INF/MANIFEST.MF | grep -i ^author: | awk -F ': ' '{print $2}')
               if [[ "$author" != "Jitterbit" ]]; then
