--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -35,8 +35,14 @@ jobs:
           echo "Commit includes common changes: $has_common"
 
           if $has_common; then
-            allModules=$(find /home/runner/work/automation/automation -type d -name '*-connector*' -printf "%f," | sed 's/,$//' | grep -vFf <(echo "$list" | tr ',' '\n') | tr '\n' ' ')
-            echo "$allModules"
+            allModules=$(find /home/runner/work/automation/automation -type d -name '*-connector*' -printf "%f ")
+            echo "Non-Filtered: $allModules"
+            for module in $list; do
+              allModules=$(echo "$allModules" | grep -vw "$module")
+            done
+          
+            echo "Filtered: $allModules"
+          
             for module in $allModules; do
               author=$(unzip -p "$module" src/main/resources/META-INF/MANIFEST.MF | grep -i ^author: | awk -F ': ' '{print $2}')
               if [[ "$author" != "Jitterbit" ]]; then
