Listing common dependents

--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -38,9 +38,8 @@ jobs:
             allModules=$(find /home/runner/work/automation/automation -type d -name '*-connector*' -printf "%f ")
             echo "Non-Filtered: $allModules"
             for module in $list; do
-              allModules=$(echo "$allModules" | grep -vw "$module")
+              allModules=$(echo "$allModules" | grep -vF "$module")
             done
-          
             echo "Filtered: $allModules"
           
             for module in $allModules; do
