--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -41,16 +41,19 @@ jobs:
             filteredModules=$(diff <(echo "$allModules" | tr ' ' '\n' | sort) <(echo "$list" | tr ',' '\n' | sort) | grep '^<' | sed 's/< //' | tr '\n' ' ')
             echo "Filtered: $filteredModules"
           
-            for module in $allModules; do
-              author=$(unzip -p "$module" src/main/resources/META-INF/MANIFEST.MF | grep -i ^author: | awk -F ': ' '{print $2}')
-              if [[ "$author" != "Jitterbit" ]]; then
-                allModules=$(echo $allModules | sed "s/\b$module\b//g")
+            filteredByManifest=()
+            
+            for module in $filteredModules; do
+              if grep -q '^Author: Jitterbit$' "/home/runner/work/automation/automation/$module/META-INF/MANIFEST.MF"; then
+                filteredByManifest+=("$module")
               fi
             done
+          
+          echo "Filtered by Manifest: ${filteredByManifest[*]}"
+          
           fi
 
           
-          echo "All Filtered Modules: $allModules"
           echo "commonFlag=$has_common" >> $GITHUB_OUTPUT
           echo "modules=$list" >> $GITHUB_OUTPUT
           echo "filteredModules=$allModules" >> $GITHUB_OUTPUT
