--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -193,7 +193,8 @@ jobs:
           
           # Get list of affected connectors by common changes
           commonChangedConnectors="${{ steps.list_modules.outputs.filteredModules }}"
-          commonChangedConnArray=$(echo "${filteredModules}" | tr ' ' ',')
+          IFS=' ' read -ra commonChangedConnArray <<< "$commonChangedConnectors"
+          echo "Module Names Affected by Common Changes: ${commonChangedConnArray[@]}"
           
           tag=${{ steps.increment_tag.outputs.new_tag }}
           echo "Tag name: $tag"
