--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -299,6 +299,7 @@ jobs:
           }
           
           if [ ${filteredConnectors[@]} -ne 0 ]; then
+            echo "entrei no if do filtered connectors"
             for value in "${filteredConnectors[@]}"; do
               modifiedConnectorsArray+=("$value")
             done
