--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -10,4 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Do something
-        run: echo "PR was merged!"
+        run: echo "PR was merged!!!"
