--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   myJob:
-    if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == false
     runs-on: ubuntu-latest
     steps:
       - name: Do something
