--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -26,10 +26,12 @@ jobs:
       - name: Build with Maven
         run: mvn clean install auxiliar-connector
 
-      - name: Publish to JFrog Artifactory
+      - name: Setup JFrog CLI
         uses: jfrog/setup-jfrog-cli@v1
         with:
           version: 'latest'
+
+      - name: Publish to JFrog Artifactory
         run: |
           jfrog rt c --url=${{ secrets.JFROG_URL }} --access-token=${{ secrets.JFROG_ACCESS_TOKEN }} --interactive=false
           jfrog rt u 'auxiliar-connector/target/*.jar' jb-connector --build-name=test --build-number=$GITHUB_RUN_NUMBER
