--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -24,7 +24,7 @@ jobs:
           architecture: x64
 
       - name: Build with Maven
-        run: mvn clean install auxiliar-connector
+        run: mvn clean install
 
       - name: Setup JFrog CLI
         uses: jfrog/setup-jfrog-cli@v1
