--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Publish to JFrog Artifactory
         run: |
           jfrog config add --artifactory-url=${{ secrets.JFROG_URL }} --access-token=${{ secrets.JFROG_ACCESS_TOKEN }} --interactive=false
-          jfrog rt u 'auxiliar-connector/target/*.jar' jb-connector --build-name=test --build-number=$GITHUB_RUN_NUMBER
+          jfrog rt u 'auxiliar-connector/target/*.jar' jb-connectors --build-name=test --build-number=$GITHUB_RUN_NUMBER
