--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -31,5 +31,7 @@ jobs:
 
       - name: Publish to JFrog Artifactory
         run: |
+          mkdir -p ./auxiliar-connector/target/10.10.10.10
+          mv -f auxiliar-connector-1.0-SNAPSHOT.jar ./auxiliar-connector/target/upload
           jfrog config add --artifactory-url=${{ secrets.JFROG_URL }} --access-token=${{ secrets.JFROG_ACCESS_TOKEN }}
           jfrog rt u 'auxiliar-connector/target/*.jar' jb-connectors --build-name=test --build-number=$GITHUB_RUN_NUMBER
