--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -34,4 +34,4 @@ jobs:
           mkdir -p ./auxiliar-connector/target/10.10.10.10
           mv -f ./auxiliar-connector/target/auxiliar-connector-1.0-SNAPSHOT.jar ./auxiliar-connector/target/upload
           jfrog config add --artifactory-url=${{ secrets.JFROG_URL }} --access-token=${{ secrets.JFROG_ACCESS_TOKEN }}
-          jfrog rt u 'auxiliar-connector/target/*.jar' jb-connectors --build-name=test --build-number=$GITHUB_RUN_NUMBER
+          jfrog rt u './auxiliar-connector/target/upload' jb-connectors --build-name=test --build-number=$GITHUB_RUN_NUMBER
