--- a/.github/workflows/build_changes.yml
+++ b/.github/workflows/build_changes.yml
@@ -33,5 +33,6 @@ jobs:
         run: |
           mkdir -p ./auxiliar-connector/target/filesToUpload/10.20.30.40-aux
           mv -f ./auxiliar-connector/target/*.jar ./auxiliar-connector/target/filesToUpload/10.20.30.40-aux
+          ls ./auxiliar-connector/target/filesToUpload/10.20.30.40-aux
           jfrog config add --artifactory-url=${{ secrets.JFROG_URL }} --access-token=${{ secrets.JFROG_ACCESS_TOKEN }}
           jfrog rt u './auxiliar-connector/target/filesToUpload/*' jb-connectors --build-name=auxiliary --build-number=$GITHUB_RUN_NUMBER
